# HoughTracker

./: .clang-format  .clang-tidy  .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt  DataVis.cc  DataVisual.cc  Makefile  PtRe105.txt  PtRe115.txt  PtRe125.txt  PtRe135.txt  PtRe65.txt  PtRe75.txt  PtRe85.txt  PtRe95.txt  ReadRoot.C  analysis1.cc  analysis2.cc  analysis3.cc  build.sh  compare_pt.cc  graph1.C  graph2.C  graph4.C  graph4.cc  graph5.C  graph7.C  graph8.C  graph9.cc  nhits.cc  readme.md  run1.sh  run2.sh  run3.sh  run4.sh  run5.sh  run6.sh  run7.sh  (+6 more)
analysis/: DataVisual.cc  analysis3.cc  analysis4.cc  analysis5.cc  graph10.cc  graph3.cc  graph6.cc
condor/: condor.py  condor.sh  condor_back.sh  gen_config.py  run.sh  submit.cmd  test.sh
include/: BasicTreeSave.h  HitPoint.h  Hough.h  HoughGlobal.h  HoughGridArea.h  HoughPoint.h  HoughTrack.h  Track.h  TreeRead.h  args.h  clag.h  global.h  line.h  match.h  pch.h  point.h  run_hough.h
main/: ReadRoot.C  main_hough.cpp  main_local.cpp
pyHough/: __init__.py
python/pyHough/: __init__.py
src/: HitPoint.cpp  Hough.cpp  HoughGlobal.cpp  HoughGridArea.cpp  ReadRoot.C  ReadRoot.C.back  Track.cpp  args.cpp  clipp.cpp  global.cpp  line.cpp  main.C  main2.C  main3.C  main4.C  main_hough.C  main_hough.C.back  main_local.C  run_hough.cpp  test.C  test2.C
